# trashgb

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.sh
roms/: bootstrap.gb
src/: cpu.rs  main.rs  mapper.rs  mmu.rs  ppu.rs  registers.rs
www/: index.html
