[package]
name = "trashgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.13.0"
winit = "0.28"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.93"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
instant = "0.1.0"
web-sys = { version = "0.3.70", features = ["Document", "Element", "GpuTextureFormat", "HtmlElement", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"

[profile.web]
inherits = "release"
lto = "fat"
opt-level = "z"
strip = true
